--- a/index.html
+++ b/index.html
@@ -50,5 +50,48 @@
       </div>
     </div>
   </section>
+  <section id="contact">
+    <div class="container">
+      <h2>Contato</h2>
+      <div class="contact-methods">
+        <div>
+          <h3>Fale conosco</h3>
+          <form>
+            <input type="text" placeholder="Seu nome" required>
+            <input type="email" placeholder="Seu e-mail" required>
+            <input type="tel" placeholder="Seu telefone (Opcional)">
+            <textarea placeholder="Sua mensagem" required></textarea>
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+        <div>
+          <h3>Nos acompanhe</h3>
+          <ul class="social-links">
+            <li>
+              <a href="#" title="Siga-nos no instagram">
+                <img src="./images/instagram.png" alt="Logo Instagram">
+              </a>
+            </li>
+            <li>
+              <a href="#" title="Siga-nos no Facebook">
+                <img src="./images/facebook.png" alt="Logo Facebook">
+              </a>
+            </li>
+            <li>
+              <a href="#" title="Visite nosso canal no Youtube">
+                <img src="./images/youtube.png" alt="Logo Youtube">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>Venha até nós</h3>
+          <p>
+            Rua JavaScript nº 124, Vila HTML - São Paulo - SP
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
