--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Sobre a Loja</a>
+            <a href="#about">Sobre a Loja</a>
           </li>
           <li>
-            <a href="#">Contatos</a>
+            <a href="#contact">Contatos</a>
           </li>
         </ul>
       </nav>
     </div>
   </header>
-  <section>
+  <section id="about">
     <div class="container">
       <img class="store-front" src="./images/loja.jpg" alt="Fachada da loja Games Shop">
       <div>
@@ -93,5 +93,12 @@
       </div>
     </div>
   </section>
+  <footer>
+    <div>
+      <p>
+        &copy; Games Shop - Todos os direitos reservados - 2024
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
